@@ -59,7 +59,10 @@ enum { CARTRIDGE_UNKNOWN        = -1,
        CARTRIDGE_TURBOSOFT_128  = 51,
        CARTRIDGE_ULTRACART_32   = 52,
        CARTRIDGE_LOW_BANK_8     = 53,
-       CARTRIDGE_LAST_SUPPORTED = 53
+       CARTRIDGE_SIC_128        = 54,
+       CARTRIDGE_SIC_256        = 55,
+       CARTRIDGE_SIC_512        = 56,
+       CARTRIDGE_LAST_SUPPORTED = 56
 };
 
 #define CARTRIDGE_MAX_SIZE	(1024 * 1024)
