@@ -1,3 +1,9 @@
+2012-05-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* cartridge.[ch], ui.c, DOC/cart.txt, DOC/CREDITS: Committing patch by Jakub
+  Husak: Support for the SIC! cartridge mapping (without the flash programming
+  feature).
+
+
 2012-05-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * configure.ac, util/benchmark.pl: Merge basic, curses, ncurses, pdcurses and
   dosvga targets - appropriate GUI/input library is now autodetected or
